Fix Bug #72992 mbstring.internal_encoding doesn't inherit default_charset